--- a/frontend/my-monitor-app/index.html
+++ b/frontend/my-monitor-app/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <!-- 如果没有 favicon，可以删掉这行 -->
+    <!-- <link rel="icon" type="image/svg+xml" href="/vite.svg" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>my-monitor-app</title>
   </head>
